# Document-Analyzer-EC530

./: README.md  app.py  auth.py  nowclient.py  textanalyzer.py  upload.py  users.db  users.json
DatabaseCreate/: json_to_database.py  jsoncreate.py  users.json
Docker_and_Packaging/: LICENSE  README.md  pyproject.toml  temp.txt
Docker_and_Packaging/src/my_package/: app.py  textanalyzer.py
Docker_and_Packaging/test/: temp.txt
Quene_Implementation/: temp.txt  upload.py
Queue_Implementation/: result_of_grade.txt  result_of_resume.txt
demo_and_results/: result_of_example.txt  result_of_test.txt
docker and quene/: Dockerfile  Mainpart.py  test  test_part.py
tests/: test_textanalyzer.py  textanalyzer_seperate.py
tests/test_textanalyzer/: test_textanalyzer.py  textanalyzer_separate.py
tests/test_upload/: test_upload.py  upload_separate.py
